# RAST_corridor_planning

./: .gitignore  CPPLINT.cfg  README.md  readme.md
RAST_corridor_planning/: CMakeLists.txt  package.xml
RAST_corridor_planning/config/: cfg.yaml  cfg_backup.yaml  cfg_sim.yaml
RAST_corridor_planning/include/: decomp_utils.hpp  multi_planning.h  planning_bezier.h  risk_aware_kinodynamic_a_star.h  visualizer.hpp
RAST_corridor_planning/include/CorridorMiniSnap/: corridor_minisnap.h
RAST_corridor_planning/include/dsp_map/: map_parameters.h
RAST_corridor_planning/launch/: gazebo_planning.launch  mavros.launch  multi_uav_mavros_sitl.launch  planning.launch  quick_test.launch  sim_multi_dyn.launch  sim_planning.launch  sim_planning_bezier.launch  sim_planning_dyn.launch  sim_single_drone.xml  simulator_dyn.launch  street.launch  test_control.launch
RAST_corridor_planning/launch/bezier/: sim_multi_bezier.launch  sim_multi_dyn_bezier.launch  sim_planning_bezier.launch  sim_single_drone_bezier.xml
RAST_corridor_planning/launch/gazebo/: world_pedestrians.launch
RAST_corridor_planning/launch/simulator/: simulator.launch
RAST_corridor_planning/rviz/: gazebo.rviz  sim.rviz  sim_multi.rviz
RAST_corridor_planning/src/: corridor_minisnap.cpp  map_sim_example.cpp  mapping.cpp  multi_planning.cpp  multi_planning_node.cpp  planning_bezier.cpp  planning_bezier_node.cpp  planning_node.cpp  planning_node_sim.cpp  traj_server.cpp
RAST_corridor_planning/worlds/: forest.world
eval_helper/: CMakeLists.txt  package.xml
eval_helper/launch/: eval.launch  eval_gz.launch
eval_helper/script/: auto_test.py  auto_test_old.py  cal_obs_density.py  calculate.py  kitty_auto_test.py  multi_env_kitty.py
eval_helper/src/: multi_eval_gz_node.cpp  multi_eval_node.cpp  noise_maker.cpp  trigger.cpp
gazebo/iris_triple_depth_camera/: iris_triple_depth_camera.sdf
launch/: empty_world.launch  mavros.launch  sim_planning.launch  simulator_dyn.launch
path_searching/: CMakeLists.txt
path_searching/launch/: bag_risk_kino_astar.launch  try_astar.launch  try_fake_risk_kino_astar.launch  try_risk_kino_astar.launch
path_searching/rviz/: astar.rviz
path_searching/src/: dyn_a_star.cpp  fake_risk_hybrid_a_star.cpp  kinodynamic_a_star.cpp  risk_hybrid_a_star.cpp  vis_a_star_node.cpp  vis_fake_risk_a_star_node.cpp  vis_risk_a_star_node.cpp
plan_env/: CMakeLists.txt
plan_env/include/plan_env/: dsp_dynamic.h  dsp_map_new.h  fake_dsp_map.h  fake_particle_risk_voxel.h  grid_map.h  map.h  map_parameters.h  risk_base.h  risk_voxel.h
plan_env/launch/: bag_dynamic_mapping.launch  bag_risk_voxel.launch  try_dynamic_mapping.launch  try_risk_voxel.launch  try_risk_voxel_moving_ego.launch  try_static_mapping.launch
plan_env/rviz/: dynamic_map.rviz  static_map.rviz
plan_env/src/: dsp_map_new.cpp  dsp_map_node.cpp  fake_dsp_map.cpp  fake_particle_risk_voxel.cpp  map.cpp  raycast.cpp  risk_base.cpp  risk_mapping_node.cpp  risk_voxel.cpp  risk_voxel_node.cpp  test_dsp_map_node.cpp
plan_manager/: CMakeLists.txt  package.xml
plan_manager/config/: real_cfg.yaml  sim_cfg.yaml  sim_fake.yaml  sim_gazebo.yaml
plan_manager/include/dsp_map/: dsp_map.h  map_parameters.h
plan_manager/include/plan_manager/: baseline.h  baseline_fake.h  fake_plan_manager.h  mader_deconfliction.hpp  plan_manager.h
plan_manager/include/plan_manager/rmader/: fake_rmader.h
plan_manager/include/sfc_gen/: firi.hpp  sfc_gen.hpp
plan_manager/launch/: bag_baseline_plan.launch  rviz.launch  sim_baseline_2.launch  sim_baseline_2_fkpcp.launch  sim_baseline_3.launch  sim_baseline_4.launch  sim_baseline_empty.launch  sim_baseline_fkpcp_2.launch  sim_baseline_fkpcp_4.launch  sim_baseline_fkpcp_obsfree_4.launch  sim_baseline_plan.launch  sim_fkpcp_4_case_0.launch  sim_fkpcp_4_case_1.launch  sim_fkpcp_4_case_2.launch  sim_fkpcp_4_case_3.launch  sim_fkpcp_4_case_4.launch  sim_fkpcp_6_case_0.launch  sim_fkpcp_6_case_1.launch  sim_fkpcp_6_case_2.launch  sim_fkpcp_8_case_1.launch  sim_fkpcp_8_case_2.launch  test_firi.launch  test_single.launch
plan_manager/launch/gazebo/: drone.xml  dynamic_2_mavros_sitl.launch  hybrid_baseline.launch  hybrid_mavros_sitl.launch  multi_baseline.launch  multi_controller.launch  multi_px4ctrl.launch  multi_uav_mavros_sitl.launch  single_baseline.launch  single_mavros_sitl.launch
plan_manager/launch/real/: real_drone_nodelet.launch
plan_manager/launch/simulator/: dbg_drone.xml  dbg_drone_fake_perception.xml  drone.xml  drone_colormap.launch  drone_delay_fakepcp.xml  drone_fake_perception.xml  simulator.launch  simulator_dyn.launch  simulator_fake.launch  vis_drone_fake_perception.xml
plan_manager/rviz/: debug.rviz  demo.rviz  demo_8.rviz  firi.rviz  gazebo.rviz  sim_multi.rviz  sim_uav0.rviz  sim_uav1.rviz  sim_uav3.rviz  single_gazebo.rviz
plan_manager/src/: baseline.cpp  baseline_fake.cpp  fake_plan_manager.cpp  fake_planner_node.cpp  mader_deconfliction.cpp  multi_baseline.cpp  multi_baseline_node.cpp  plan_manager.cpp  planner_node.cpp  test_baseline_node.cpp  test_firi_node.cpp
plan_manager/src/rmader/: fake_rmader.cpp  fake_rmader_plan_manager.cpp
rviz/: sim.rviz
src/: planning_node.cpp  planning_node_sim.cpp
swarm_bridge/: CMakeLists.txt  README.md
swarm_bridge/include/: reliable_bridge.hpp
swarm_bridge/src/: bridge_node_tcp.cpp  bridge_node_udp.cpp  traj2odom_node.cpp
traj_coordinator/: CMakeLists.txt
traj_opt/: CMakeLists.txt  README.md
traj_opt/include/: plan_container.hpp
traj_opt/include/bernstein/: bezier_optimizer.hpp
traj_opt/include/optimizer/: poly_traj_optimizer.h
traj_opt/include/polynomial/: mini_snap.h  mini_snap.hpp  mini_snap_utils.hpp  poly_traj_optimizer.h
traj_opt/launch/: test_minisnap.launch  try_bezier.launch
traj_opt/rviz/: test_bezier.rviz  test_minisnap.rviz
traj_opt/src/: bezier_optimizer.cpp  mini_snap.cpp  test_minisnap.cpp
traj_opt/test/: test_bezier_opt.cpp  test_minisnap.cpp  vis_bezier_opt.cpp
traj_server/: CMakeLists.txt  package.xml
traj_utils/: CMakeLists.txt  package.xml
worlds/: street_more_pedestrians.world
(+25 files in other folders)
